<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhotoDetailActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.kofigyan.stateprogressbar.StateProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_progress_bar"
        android:layout_marginBottom="@dimen/margin_progress_bar"
        android:scrollbarSize="@dimen/progress_bar_scrollbarsize"
        app:spb_animateToCurrentProgressState="true"
        app:spb_checkStateCompleted="true"
        app:spb_currentStateDescriptionColor="@color/colorPrimaryDark"
        app:spb_currentStateNumber="two"
        app:spb_maxStateNumber="three"
        app:spb_stateBackgroundColor="@color/background_progress_bar"
        app:spb_stateDescriptionColor="@color/background_color_num_progress_bar"
        app:spb_stateForegroundColor="@color/colorPrimaryDark"
        app:spb_stateNumberBackgroundColor="@color/background_color_num_progress_bar"
        app:spb_stateNumberForegroundColor="@color/foreground_color_num_progress_bar"
        app:spb_stateSize="@dimen/progress_bar_statesize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/margin_fields"
            android:layout_marginLeft="@dimen/margin_fields">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:textColorHint="@color/background_text_color"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/Spinner_type_of_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Type of Location*"
            android:textColorHint="@color/background_text_color"
            android:layout_marginRight="@dimen/margin_fields"
            android:layout_marginLeft="@dimen/margin_fields"
            android:layout_marginTop="@dimen/margin_fields"
            app:met_floatingLabel="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_fields"
            android:layout_marginRight="@dimen/margin_fields"
            android:layout_marginTop="@dimen/margin_fields"
            android:text="@string/Potholeseverity"
            android:textSize="17sp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_fields"
            android:id="@+id/rg"
            >
            <RadioButton android:id="@+id/severity_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity_high"

                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/severity_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity_medium"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/severity_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/severity_low"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPotholeDepth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/margin_fields"
            android:layout_marginLeft="@dimen/margin_fields">



        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/margin_fields"
            android:layout_marginLeft="@dimen/margin_fields">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextRemark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:textColorHint="@color/background_text_color"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/margin_fields"
            android:layout_marginRight="@dimen/margin_fields"
            android:layout_marginLeft="@dimen/margin_fields">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/background_text_color"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_button"
            android:layout_width="160dp"
            android:layout_height="@dimen/hieght_nxt_button"
            android:layout_margin="@dimen/margin_nxt_button"
            android:background="@color/colorPrimaryDark"
            android:text="Next"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hieght_nxt_button"
            android:layout_margin="@dimen/margin_nxt_button"
            android:background="@color/colorPrimaryDark"
            android:text="Back"
            android:textColor="@color/white" />
    </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>